--- a/index.html
+++ b/index.html
@@ -422,7 +422,9 @@
     <footer>
         <div class="footer-bottom">
             <p class="footer-copyright">
-                © 2025 One25 Technologies. All rights reserved.
+                © 2025 <a href="https://one25tech.com" target="_blank"
+                    style="text-decoration: none; color: white; font-size: 16px;">One25 Technologies</a>. All rights
+                reserved.
             </p>
         </div>
     </footer>
