--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <button class="timeline-filter active" data-filter="all">All</button>
                 <button class="timeline-filter" data-filter="education">Education</button>
                 <button class="timeline-filter" data-filter="work">Work</button>
-                <button class="timeline-filter" data-filter="project">Startup</button>
+                <button class="timeline-filter" data-filter="startup">Startup</button>
             </div>
 
             <div class="timeline-container">
@@ -323,7 +323,7 @@
                 </div>
             </div>
 
-            <div class="timeline-item" data-category="project">
+            <div class="timeline-item" data-category="work">
                 <div class="timeline-node">🚀</div>
                 <div class="timeline-content">
                     <div class="timeline-year">Jul 2021 - Aug 2023</div>
